# cms-backend/src/api/users-related/index.ts
@@ -1,0 +1,1 @@
+export { UsersRelatedModule } from "./users-related.module";
